# clean-architecture-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/consumer/: __main__.py  app.py
{{cookiecutter.project_slug}}/app/consumer/dto/: testing_variant.py
{{cookiecutter.project_slug}}/app/consumer/topics/: testing_topic.py
{{cookiecutter.project_slug}}/app/core/: errors.py
{{cookiecutter.project_slug}}/app/core/dto/: auth.py  errors.py
{{cookiecutter.project_slug}}/app/core/interfaces/: command.py  query.py  service.py
{{cookiecutter.project_slug}}/app/core/usecases/: base.py  pagination.py
{{cookiecutter.project_slug}}/app/infrastructure/: config.py  log.py  sentry.py  tracing.py
{{cookiecutter.project_slug}}/app/infrastructure/db/: session.py
{{cookiecutter.project_slug}}/app/infrastructure/db/migrations/: env.py
{{cookiecutter.project_slug}}/app/infrastructure/db/models/: base.py
{{cookiecutter.project_slug}}/app/infrastructure/ioc/: commands_container.py  container.py  kafka_container.py  queries_container.py
{{cookiecutter.project_slug}}/app/infrastructure/kafka/: app.py  registry.py  serializer.py
{{cookiecutter.project_slug}}/app/utils/: time.py
{{cookiecutter.project_slug}}/app/web/: callbacks.py  errors.py  handlers.py  middlewares.py
{{cookiecutter.project_slug}}/app/web/dto/: base.py
{{cookiecutter.project_slug}}/app/web/healthcheck/: commander.py  commands.py  handler.py  router.py  status.py
{{cookiecutter.project_slug}}/docs/: dependency_rules.drawio.xml
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/unit/healthcheck/: conftest.py  test_commander.py
{{cookiecutter.project_slug}}/tests/utils/: api_client.py  curlify.py
