[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pydantic = {extras = ["email"], version = "^1.10.2"}
sentry-sdk = "^1.9.10"
pyhumps = "^3.7.2"
dependency-injector = "^4.39.1"
structlog = "^22.1.0"
orjson = "^3.7.8"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
opentelemetry-sdk = "^1.13.0"
opentelemetry-instrumentation-fastapi = "^0.34b0"
opentelemetry-instrumentation-logging = "^0.34b0"
protobuf = "3.20.1"
opentelemetry-exporter-jaeger = "^1.13.0"
opentelemetry-opentracing-shim = "^0.34b0"
opentelemetry-instrumentation-httpx = "^0.34b0"
{% if cookiecutter.use_kafka == 'yes' %}
faust-streaming = "^0.8.11"
python-schema-registry-client = {extras = ["faust"], version = "^2.4.1"}
{% endif %}
{% if cookiecutter.use_postgres == 'yes' %}
sqlalchemy = {extras = ["asyncio"], version = "^1.4.41"}
greenlet = "^1.1.3"
sqlalchemy-stubs = "^0.4"
alembic = "^1.8.0"
asyncpg = "^0.26.0"
opentelemetry-instrumentation-sqlalchemy = "^0.34b0"
{% endif %}
[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pytest-xdist = "^2.5.0"
pytest-sugar = "^0.9.5"
pytest-factoryboy = "^2.5.0"
better-exceptions = "^0.3.3"
pytest-instafail = "^0.4.2"
mypy = "^0.971"
pytest-cov = "^3.0.0"
yappi = "^1.3.6"
trio = "^0.21.0"
pytest-trio = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--numprocesses=0"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \S*/tests/\S*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
